c4prj2_input/grade.txt
Grading at Wed Dec 25 10:22:37 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:31:29: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
       fc->decks[i].cards[j] = &deck->cards[i];
                             ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
